--- a/coast.html
+++ b/coast.html
@@ -19,5 +19,10 @@
         </li>
       </ul>
     </nav>
+    <section>
+      <figure>
+        <img src="assets/images/beach.jpg" alt="an image of beach" />
+      </figure>
+    </section>
   </body>
 </html>
